# Linux-Steam-ModManager

./: .flake8  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  install-nxm-handler.sh  modlauncher-gui.py  modlauncher.py  pyproject.toml  requirements-dev.txt
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  game_request.yml
.github/workflows/: ci.yml  release.yml
assets/: style.css
assets/hicolor/: index.theme
dev-tools/: adopt_untracked_stardew.py
docs/: QA.md  game-profile-schema.md
engines/: bepinex.py  bethesda.py  modfolder.py  rimworld.py
flatpak/: README.md  io.github.pyromeister.lsmm.desktop  io.github.pyromeister.lsmm.metainfo.xml  io.github.pyromeister.lsmm.yml
games/: 7days_to_die.json  craftopia.json  fallout4.json  planet_crafter.json  rimworld.json  skyrim_se.json  stardew_valley.json  starfield.json
lsmm/: cli.py
lsmm/core/: config.py  fomod.py  installer.py  loot.py  nexus.py  plugins.py  profiles.py  proton.py  script_extender.py  staging.py  updater.py  utils.py  version.py
lsmm/engines/: __init__.py  base.py  bepinex.py  bethesda.py  modfolder.py  rimworld.py
lsmm/games/: craftopia.json  fallout4.json  falloutnv.json  planet_crafter.json  skyrim_se.json  stardew_valley.json  starfield.json
lsmm/gui/: app.py  window.py
lsmm/gui/dialogs/: api_key.py  collection.py  conflict.py  first_run.py  fomod.py  help.py  settings.py  steam_path.py  update_results.py  update_snooze.py
src/: config.py  installer.py  net.py  nexus.py  plugins.py  profiles.py
src/gui/: app.py
tests/: conftest.py  test_bethesda_fomod.py  test_bethesda_se.py  test_config.py  test_engines_uninstall.py  test_fomod.py  test_fomod_dialog.py  test_install_handler.py  test_installer.py  test_load_order_loot.py  test_loot.py  test_nexus.py  test_plugins.py  test_profiles.py  test_proton.py  test_refresh_no_side_effects.py  test_staging.py  test_update_results.py
tests/gui/: test_app_smoke.py
(+12 files in other folders)
