[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lsmm"
version = "0.3.0-alpha"
description = "Native Linux mod manager for Steam games"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
authors = [{name = "pyromeister"}]
dependencies = ["py7zr>=0.20"]
classifiers = [
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: Games/Entertainment",
]

[project.scripts]
lsmm = "lsmm.cli:main"
lsmm-gui = "lsmm.gui.app:main"

[project.optional-dependencies]
gui = ["PyGObject>=3.44"]
dev = ["pytest>=7", "pytest-cov", "flake8"]

[tool.setuptools.packages.find]
where = ["."]
include = ["lsmm*"]

[tool.setuptools.package-data]
"lsmm" = ["games/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "gui: tests requiring GTK/libadwaita and a display or Xvfb",
  "integration: slower integration tests that exercise multiple subsystems",
  "network: tests requiring external network access",
  "manual: release/QA checks that are not run automatically",
]

[tool.coverage.run]
parallel = false
data_file = "/tmp/.lsmm-coverage"
